[package]
name = "yurizaki"
version = "1.1.0"
edition = "2021"

[dependencies]
anitomy = "0.2"
directories = { version = "5.0", optional = true}
log = "0.4"
notify = "4.0"
simple_logger = "4.1"
trash = { version = "3.0", optional = true }
yaml-rust = "0.4"

[features]
trash = ["dep:trash"]
directories = ["dep:directories"]
