[package]
name = "yurizaki"
version = "1.2.0"
edition = "2021"

[dependencies]
anitomy = "0.2"
cfg-if = "1.0"
directories = { version = "6.0", optional = true}
log = "0.4"
notify = "4.0"
regex = { version = "1.12", optional = true }
simple_logger = "5.1"
trash = { version = "5.2", optional = true }
yaml-rust = "0.4"

[features]
default = ["regex"]
trash = ["dep:trash"]
directories = ["dep:directories"]
regex = ["dep:regex"]
